--- a/threads-of-fate/index.html
+++ b/threads-of-fate/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="color-scheme" content="light dark">
-    <title>Text Visualization Connector</title>
+    <title>Threads of Fate - Text Visualization Connector - AlphaBrate Art</title>
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap"
         rel="stylesheet">
@@ -26,7 +26,7 @@
         <div>
             <a href="../gallery">Gallery</a>
             <a href="../collections">Collections</a>
-            <a href="/about">Our Vision</a>
+            <a href="../our-vision/">Our Vision</a>
             <a href="/contact">Contact</a>
         </div>
     </div>
