Add hidden image for Chat apps
Add hidden image for Chat apps to fetch as header image

--- a/threads-of-fate/index.html
+++ b/threads-of-fate/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <img src="./hidden-image.webp" alt="AlphaBrate Art Banner" class="visually-hidden">
     <a href="#main" class="skip-main">Skip to main content</a>
     <div class="header">
         <div class="logo">Threads of Fate
