--- a/collections/index.html
+++ b/collections/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <img src="./hidden-image.webp" alt="AlphaBrate Art Banner" class="visually-hidden">
     <a href="#main" class="skip-main">Skip to main content</a>
     <div data-scroll-container>
         <div class="header image-no-touch">
