--- a/gallery/index.html
+++ b/gallery/index.html
@@ -55,10 +55,10 @@
 
         <div class="footer">
             <div>
-                Copyright &copy; <span class="date-now" data-date="year">2025</span> <a href="/">AlphaBrate</a>.
+                APEL applies.
             </div>
             <div>
-                All rights reserved except for the images posted in the gallery.
+                Copyright &copy; <span class="date-now" data-date="year">2025</span> <a href="/">AlphaBrate</a>.
             </div>
         </div>
     </div>
