--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <a href="#main" class="skip-main">Skip to main content</a>
     <div data-scroll-container>
         <div class="header image-no-touch">
-            <div class="logo">AlphaBrate
+            <div class="logo">
+                <img src="https://alphabrate.github.io/icons/alphabrate.svg" alt="AlphaBrate Icon">
+                AlphaBrate
                 <span class="header-logo">
                     <img src="assets/logo/light.webp" alt="Art" class="show-in-light image-no-touch">
                     <img src="assets/logo/dark.webp" alt="Art" class="show-in-dark image-no-touch">
@@ -85,10 +87,10 @@
 
         <div class="footer">
             <div>
-                Copyright &copy; <span class="date-now" data-date="year">2025</span> <a href="/">AlphaBrate</a>.
+                APEL applies.
             </div>
             <div>
-                All rights reserved except for the images posted in the gallery.
+                Copyright &copy; <span class="date-now" data-date="year">2025</span> <a href="/">AlphaBrate</a>.
             </div>
         </div>
     </div>
