--- a/threads-of-fate/index.html
+++ b/threads-of-fate/index.html
@@ -110,10 +110,10 @@
 
     <div class="footer">
         <div>
-            Copyright &copy; <span class="date-now" data-date="year">2025</span> <a href="/">AlphaBrate</a>.
+            APEL applies.
         </div>
         <div>
-            All rights reserved except for the images posted in the gallery.
+            Copyright &copy; <span class="date-now" data-date="year">2025</span> <a href="/">AlphaBrate</a>.
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
